<resources>
    <string name="app_name">Dicoding Events</string>
    <string name="title_home">Home</string>
    <string name="bottom_title_upcoming_event">Upcoming</string>
    <string name="bottom_title_finished_event">Finished</string>
    <string name="bottom_title_favorite_event">Favorite</string>
    <string name="bottom_title_settings">Setting</string>
    <string name="title_upcoming_event">Upcoming Event</string>
    <string name="title_finished_event">Finished Event</string>
    <string name="page_title_home">Dicoding Event</string>

    <style name="page_title_upcoming">Upcoming Event</style>

    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Enable Event Notification</string>
    <string name="event_image_title">Event Dicoding</string>
    <string name="image_event">Event Image</string>
    <string name="owner_name">Organizer</string>
    <string name="begin_time">Implementation Schedule</string>
    <string name="start_event">Start</string>
    <string name="end_event">Finish</string>
    <string name="quota">Quota</string>
    <string name="quota_left">Remaining Quota</string>
    <string name="register">Regist Here!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="page_title_finished">Finished Event</string>
    <string name="searchbar_hint">Enter Your Event</string>
    <string name="error_message">Sorry, you are not currently connected to the Internet.</string>
</resources>