<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/bottom_title_upcoming_event" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_finished"
        android:title="@string/bottom_title_finished_event" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/bottom_title_favorite_event"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/bottom_title_settings"/>

</menu>