<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingeventsv2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.dicodingeventsv2.ui.upcoming.UpcomingFragment"
        android:label="@string/bottom_title_upcoming_event"
        tools:layout="@layout/fragment_upcoming"/>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingeventsv2.ui.finished.FinishedFragment"
        android:label="@string/bottom_title_finished_event"
        tools:layout="@layout/fragment_finished"/>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingeventsv2.ui.favorite.FavoriteFragment"
        android:label="@string/bottom_title_favorite_event"
        tools:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.dicodingeventsv2.ui.settings.SettingsFragment"
        android:label="@string/bottom_title_settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>