<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/page_title"
            style="@style/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/page_title_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/dicoding_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/title_upcoming_event"
            app:layout_constraintBottom_toTopOf="@+id/finished_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/finished_event" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/finished_event"
            android:layout_width="0dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/layout_upcoming_home" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/finished_event_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finished_event" />

        <TextView
            android:id="@+id/finished_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_finished_event"
            app:layout_constraintBottom_toTopOf="@+id/upcoming_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/upcoming_event" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@+id/finished_event"
            app:layout_constraintEnd_toEndOf="@+id/finished_event"
            app:layout_constraintStart_toStartOf="@+id/finished_event"
            app:layout_constraintTop_toTopOf="@+id/finished_event" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:paddingBottom="20dp"
            app:flow_horizontalAlign="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/finished_event"
            tools:layoutMode="clipBounds"
            tools:listitem="@layout/layout_finished_home" />

        <TextView
            android:id="@+id/error_message"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            tools:text="@string/error_message"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@+id/finished_event_title"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="@+id/upcoming_event"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/upcoming_event"
            app:layout_constraintTop_toTopOf="@+id/upcoming_event" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>